Opened 8 years ago

Closed 8 years ago

#12925 closed bug (fixed)

Errors in "rename alert"

Reported by: humdinger Owned by: pulkomandy
Priority: normal Milestone: Unscheduled
Component: Kits/libtracker.so Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev50505.

  1. The variable replacing doesn't work anymore:

Unnecessary alert renaming a Web+ bookmark

  1. The above happens if you try to rename anything under ~/config/settings, even if you try to rename a bookmark in ~/config/settings/WebPositive/Bookmarks. Not needed in this case, I'd say.

I blame hrev50503.

Attachments (1)

rename.png (7.8 KB ) - added by humdinger 8 years ago.
Unnecessary alert renaming a Web+ bookmark

Download all attachments as: .zip

Change History (3)

by humdinger, 8 years ago

Attachment: rename.png added

Unnecessary alert renaming a Web+ bookmark

comment:1 by diver, 8 years ago

Status: newassigned

Probably related to hrev50503 (see parent commit)

comment:2 by pulkomandy, 8 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev50510.

Note: See TracTickets for help on using tickets.