Fix regressions introduced in hrev 50503

- Missing "dontAsk" when renaming some files,
- Missing exceptions in the warning alert construction to automatically
  allow modifying some files (anything inside the settings folder)
- Missing translations

Fixes #12925.